hphp/test/quick/include-error3.php.expectf

Fatal error: require_once(not-extisting-file.php): File not found in %s/test/quick/include-error3.php on line 2
